# wasm-nm

./: .gitignore  CMakeLists.txt
include/lib/WasmBin/: Deserialize.h  LLVM-Support.h  Module.h
lib/: CMakeLists.txt
lib/WasmBin/: CMakeLists.txt  Deserialize.cpp
src/: CMakeLists.txt  Parser.cpp  driver.cpp
